--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=HospitalManagement
+application.title=OrganManagement
 application.vendor=lingfengzhou
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -27,7 +27,7 @@ debug.test.modulepath=\
     ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/HospitalManagement.jar
+dist.jar=${dist.dir}/OrganManagement.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -70,7 +70,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
-jlink.launcher.name=HospitalManagement
+jlink.launcher.name=OrganManagement
 main.class=userinterface.MainJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
